--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,10 @@
 
 
 body {
-  background-color:white;
+  /* background-color:black; */
+  /* background-image: url("/assets/images/blackownedbusiness.jpg"); */
+  margin: 0;
+
   /* background-image: url("https://jooinn.com/images/black-leather-2.jpg"); */
   
 }
@@ -27,11 +30,13 @@ body {
 .grid-container {
   margin-right: auto; /* 1 */
   margin-left:  auto; /* 1 */
-
+  background-color: white;
+  /* background-color:rgb(95, 91, 65); */
+  /* margin-top: px; */
   max-width: 700px; /* 2 */
-
   padding-right: 10px; /* 3 */
   padding-left:  10px; /* 3 */
+  height: 100vh;
   
 }
 
@@ -40,11 +45,22 @@ body {
     border-style: solid;
     border-width: 5px;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    flex-wrap: nowrap;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
-    background-color: blue;
+    /* align-items: center; */
+    /* background-color: blue; */
+  
+}
+
+
+
+.single-comment-one  {
+  /* display: inline-flex; */
+  /* border-style: solid;
+  flex-grow: 4;
+  color: red; */
+  flex-grow: 3;
 }
 
 
@@ -72,8 +88,8 @@ body {
 ul {
     list-style-type: none;
     list-style: none;
-    /* margin: 0;
-    padding: 0; */
+    margin: 0;
+    padding: 0; 
     text-decoration: none;
   }
    
@@ -95,8 +111,9 @@ body {
 
 
 nav {
-  background:brown;
+  background-color:rgb(158, 108, 116);
   padding: 0 15px;
+  margin-top: 0;
 }
 a {
   color: black;
@@ -104,6 +121,7 @@ a {
 }
 .menu,
 .submenu {
+  margin-top: 0;
   list-style-type: none;
 }
 .logo {
