--- a/app/assets/stylesheets/companies.css
+++ b/app/assets/stylesheets/companies.css
@@ -2,9 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/ */
 
-.company_show h1 {
+ h1 {
     font-family: 'Raleway', sans-serif;
     font-weight: lighter;
+    margin: 0;
+    padding-top:20px;
     font-size: 40px;
     text-align: center;
   }
