--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,9 +1,11 @@
-<p> [ ] Goals for this page is to allow users to see most recent/added companies </p>
-<p> [x] Goals for this page is to allow users to search companies </p>
-<p> [ ] Goals for this page is to allow users request to add a company to admin </p>
+<%# [ ] Goals for this page is to allow users request to add a company to admin%>
 
-<h1><%if current_user %> Hello <%= current_user.username.capitalize %>, <%end%> Search for a company</h1>
+<h1><%if current_user %> Hello <%= current_user.username.capitalize %>! <%end%> 
+<h1>Search for a company</h1>
 
+<br>
+
+<div class="center">
 <%= form_tag companies_path, method: :get do %>
   <p>
     <%= text_field_tag :query, params[:query] %>
@@ -13,9 +15,11 @@
 
 
 
-<ol>
+
+
 <% @companies.each do |company| %>
-  <li><%= link_to company.title, company %></li>
+  <p><%= link_to company.title, company %></p>
 <% end %>
-</ol>
+
+</div>
 
