--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,3 +1,5 @@
+<div class="full">
+<br>
 <%= form_for(@company) do |f| %>
   <% if @company.errors.any? %>
     <div id="error_explanation">
@@ -38,4 +40,4 @@
     <%= f.submit %>
   </div>
 <% end %>
-
+</div>
