--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,7 +1,8 @@
+<div class="full">
 Favorited/followed by:
   <% @company.favorites.each do |favorite| %>
   <br>
     <%= link_to favorite.user.username, user_path(favorite.user) %> loved
      ❤️ <%= favorite.company.title %>
   <% end %>
-
+</div>
