--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,13 @@
     <% end %>
        <%= current_user_logged_in %>
   </header>
-     <div class="grid-container">
+     <div class="grid-container center">
     <%= yield %>
+    
+
+
+
+
     </div>
   </body>
 </html>
