--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,11 @@
-
+<div class="full">
 <%= form_with model: @user, local: true do |f| %>
-<%= f.text_field :username, placeholder: "username" %>
-<%= f.text_field :email, placeholder: "email" %>
-<%= f.password_field :password, placeholder: "password" %>
-<%= f.submit %>
+  <%= f.text_field :username, placeholder: "username" %>
+  <%= f.text_field :email, placeholder: "email" %>
+  <%= f.password_field :password, placeholder: "password" %>
+  <%= check_box_tag "favorite" %>
+  <%# check_box_tag "project_#{project.id}", "#{project.done}", project.done?, disabled: "#{project.done?}" %>
+  <%= f.submit %>
 <% end %>
 
 <% if @user.errors.any? %>
@@ -11,3 +13,4 @@
     <p><%= msg %></p>
     <% end %>
 <% end %>
+</div>
