--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="full">
 <%= form_with scope: :comment, url: company_comment_path(@comment.company, @comment), method: :patch do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
@@ -27,3 +28,5 @@
 
     <%= button_to "delete", {:controller => :comments,
       :action => 'destroy', :company_id => @comment.company_id, :user_id => @comment.user_id }, :method => :delete, :class => 'list_btn' %>
+
+      </div>
