--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,11 +1,10 @@
 <%# [ ] Goals for this page is to allow users request to add a company to admin%>
-
+<div class="full">
 <h1><%if current_user %> Hello <%= current_user.username.capitalize %>! <%end%> 
 <h1>Search for a company</h1>
 
 <br>
 
-<div class="center">
 <%= form_tag companies_path, method: :get do %>
   <p>
     <%= text_field_tag :query, params[:query] %>
