--- a/app/views/layouts/_logged_in_navbar.html.erb
+++ b/app/views/layouts/_logged_in_navbar.html.erb
@@ -2,9 +2,9 @@
   <ul class="menu">
     <li class="logo"><a href="#">Black Owned</a></li>
     <%# <li class="item"><a href="#">Home</a></li> %>
-    <li class="item"><%= link_to "All Companies", companies_path %></a></li>
-    <li class="item"><%= link_to "Your page", user_path(current_user) %></a></li>
-    <li class="item"><%= link_to "Create a list", new_list_path %></a></li>
+    <li class="item"><%= link_to "View all Companies", companies_path %></a></li>
+    <li class="item"><%= link_to "Your Profile", user_path(current_user) %></a></li>
+    <li class="item"><%= link_to "Create a new list", new_list_path %></a></li>
     <li class="item"><%= link_to "Log out", logout_path, method: :delete %></a></li>
 
   
