--- a/app/views/users/_user_show.html.erb
+++ b/app/views/users/_user_show.html.erb
@@ -1,7 +1,13 @@
-<div class="center">
+<div class="center full">
 <h1><%= @user.username %> </h1> 
+<div class="grid">
+  <div class="left-half">
 <h3>Comments count: <%= @user.comments.count %></h3>
+</div>
+<div class="right-half">
 <h3>Favorites count: <%= @user.favorites.count %></h3>
+</div>
+</div>
 
   <%if @user.comments.present? %>
       <p>Recent Comments:</p>
@@ -15,7 +21,7 @@
 
 
   <%if @user.lists.present? %><br><br>
-    <h2><%= @user.username %> lists: </h2>
+    <h2> Your lists: </h2>
          <% @user.lists.each do |list| %>
             <div class="single-comment">
             <%= link_to list.name, list_path(list.id) %>
