--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,3 +1,5 @@
+<div class="full">
+
 <h1>this is list index</h1>
 This is list index -- should show all lists that belongs to a particular user
 
@@ -6,3 +8,4 @@ This is list index -- should show all lists that belongs to a particular user
   <li><%= link_to list.name, list %></li>
 <% end %>
 </ul>
+</div>
