--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,8 @@
-<p> [X] Goals for this page is to allow a user to edit their list name </p>
+<%# <p> [X] Goals for this page is to allow a user to edit their list name </p>
 <p> Goals for this page is to allow a user to see all businesses that they added to the list </p>
 <p> Goals for this page is to allow a user to have CRUD actions with their list </p>
 <p>This is list show-- should show contents within a particular lists</p>
-<p> Need to find a way to destroy all companies associated with this list the contents/company names within the list</p>
+<p> Need to find a way to destroy all companies associated with this list the contents/company names within the list</p> %>
 
 <div class="center">
 <h1 class="list_name"><%= @list.name %></h1> 
