--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="full">
 <%= form_for(@list) do |f| %>
   <% if @list.errors.any? %>
     <div id="error_explanation">
@@ -19,3 +20,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+</div>
