--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Edit Account Settings </h1>
 <%= render 'form' %>
 
- <%= link_to 'Destroy',  @user ,  method: :delete, data: { confirm: 'Are you sure?' } %>
+ <p><%= link_to 'Destroy',  @user ,  method: :delete, data: { confirm: 'Are you sure?' } %></p>
