adds button css and extra css to owners pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -172,7 +172,7 @@ body {
 .comment-grid div{
   /* display: grid;
   grid-template-columns: 200px 500px; */
-  /* grid-template-columns: 1fr 1fr 1fr;
+  /* grid-taemplate-columns: 1fr 1fr 1fr;
   grid-gap: 20px; */
   /* border: mediumaquamarine solid; */
 }
