--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -17,7 +17,7 @@
     <%= f.hidden_field :company_id %>
   </div>
   <div class="actions">
-    <%= f.submit "edit comment" %>
+    <%= f.submit "edit comment", :class => "myButton" %>
   </div>
 <% end %>
 
@@ -27,6 +27,7 @@
 
 
     <%= button_to "delete", {:controller => :comments,
-      :action => 'destroy', :company_id => @comment.company_id, :user_id => @comment.user_id }, :method => :delete, :class => 'list_btn' %>
+      :action => 'destroy', :company_id => @comment.company_id, :user_id => @comment.user_id }, :method => :delete, :class => 'myButton' %>
 
       </div>
+      
