--- a/app/views/companies/_list_show.html.erb
+++ b/app/views/companies/_list_show.html.erb
@@ -29,7 +29,7 @@
 <br>
 <br>
 
-<% if @company.location.present? %>
+<%# if @company.location.present? %>
 <div class="center">
   <iframe  
     width="600"
@@ -38,7 +38,7 @@
     src="https://www.google.com/maps/embed/v1/place?key=<%=ENV['GOOGLE_KEY']%>&q=<%= @company.location %>" allowfullscreen>
   </iframe>
 </div>
-<%end%>
+<%#end%>
 
 
 
