--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -8,7 +8,7 @@
 <%= form_tag companies_path, method: :get do %>
   <p>
     <%= text_field_tag :query, params[:query] %>
-    <%= submit_tag "Search", name: nil %>
+    <%= submit_tag "Search", name: nil, :class => "myButton" %>
   </p>
 <% end %>
 
