--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -37,7 +37,7 @@
     <%= f.text_area :description, placeholder: "Description of Company" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Add a Company", :class => "myButton"%>
   </div>
 <% end %>
 </div>
