--- a/app/assets/stylesheets/companies.css
+++ b/app/assets/stylesheets/companies.css
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/ */
 
  h1 {
-    font-family: "Arial Black", Gadget, sans-serif;
+    font-family: "Cinzel", Gadget, sans-serif;
     font-weight: lighter;
     margin: 0;
     padding-top:20px;
