--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -13,7 +13,7 @@
 <div class="fields">
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, placeholder: "list name" %>
     <%# f.hidden_field :user_id, :value => 1 %>
   </div>
   <div class="actions">
