--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,11 +4,12 @@
 <p>This is list show-- should show contents within a particular lists</p>
 <p> Need to find a way to destroy all companies associated with this list the contents/company names within the list</p> %>
 
-<div class="center">
+<div class="center full">
 <h1 class="list_name"><%= @list.name %></h1> 
 
+<% if current_user == @list.user %>
 <p class="move"> <%= link_to 'Rename', edit_list_path(@list) %> | <%= link_to 'Destroy',  @list,  method: :delete, data: { confirm: 'Are you sure you want to destroy this list?' } %> </p>
-</div>
+<%end%>
 
 <ol class="list_ul">
 <% @list.companies.each do |company| %>
@@ -25,3 +26,4 @@
 
 <br>
 <br>
+</div>
