--- a/app/views/companies/_list_show.html.erb
+++ b/app/views/companies/_list_show.html.erb
@@ -40,6 +40,7 @@
 </div>
 <%#end%>
 
+<br>
 
 
 <% if current_user.lists.present? %>
@@ -54,7 +55,7 @@
 
 <% else %>
     <div class="center">
-        <%= link_to "Create a list", new_list_path %></a>
+        <%= link_to "Create a list", new_list_path, :class => "myButton"%></a>
     </div>
 <%end%>
 
