--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up </h1>
 
-<%= render 'form' %>
+<%# render 'form' %>
 
 <div class="full">
 <%= form_with model: @user, local: true do |f| %>
