--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -16,7 +16,7 @@
 
 
 
-<% @companies.each do |company| %>
+<% @companies.abc.each do |company| %>
   <p><%= link_to company.title, company %></p>
 <% end %>
 
