adds comments index page

--- a/app/views/companies/_list_show.html.erb
+++ b/app/views/companies/_list_show.html.erb
@@ -1,4 +1,5 @@
 <%# Displays company comment count %>
+<div class="full">
 <div class="grid">
   <div class="left-half">
 <%if @company.comments.count == 0 %>
@@ -105,3 +106,4 @@
 
 
 <% end %>
+</div>
