updates categories and alerts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -208,6 +208,10 @@ ul {
 
   .alert{
     color:red;
+    margin: 0;
+    padding-top:20px;
+    padding-bottom:20px;
+    text-align: center;
   }
    
 
