--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,43 +1,1 @@
-<div class="full">
-<br>
-<%= form_for(@company) do |f| %>
-  <% if @company.errors.any? %>
-    <div id="error_explanation">
-      <h2>There were some errors:</h2>
-      <ul>
-        <% @company.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title, placeholder: "Company Title" %>
-  </div>
-    <div class="field">
-    <%= f.label :email %><br>
-    <%= f.email_field :email, placeholder: "Company Email" %>
-  </div>
-    <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.telephone_field :phone, placeholder: "Company Phone Number"%>
-  </div>
-     <div class="field">
-    <%= f.label :website %><br>
-    <%= f.url_field :website, placeholder: "Company Website" %>
-  </div>
-     <div class="field">
-    <%= f.label :location %><br>
-    <%= f.telephone_field :location, placeholder: "Company Location"%>
-  </div>
-      <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description, placeholder: "Description of Company" %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Add a Company", :class => "myButton"%>
-  </div>
-<% end %>
-</div>
+<%= render 'form'%>
