--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -36,6 +36,10 @@
     <%= f.label :description %><br>
     <%= f.text_area :description, placeholder: "Description of Company" %>
   </div>
+
+      <div class="field">
+  <%= f.collection_select :category_id , @categories, :id, :name, {:include_blank => 'Please Select A Category'} %>
+   </div>
   <div class="actions">
     <%= f.submit "Add a Company", :class => "myButton"%>
   </div>
